--- a/.github/workflows/main_push.yaml
+++ b/.github/workflows/main_push.yaml
@@ -2,6 +2,8 @@ name: Workflow Evento
 on:
   push:
     branches: ["main","feature/*"]
+    tags:
+      - v*
 jobs:
   teste:
     runs-on: ubuntu-latest
